[package]
name = "etcdv3client"
version = "0.4.x"
authors = ["zzzdong <kuwater@163.com>"]
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/zzzdong/etcdv3client-rust"
homepage = "https://github.com/zzzdong/etcdv3client-rust"
documentation = "https://docs.rs/etcdv3client/"
description = """
a simple etcdv3 client
"""
categories = ["asynchronous", "network-programming"]
keywords = ["etcd", "async"]


[features]
default = []
tls = ["tonic/tls"]
gen = [ "tonic-build" ]


[dependencies]
futures = "0.3"
http = "0.2"
prost = "0.12"
tonic = { version = "0.11" }
tokio = { version = "1.0", features = ["sync", "time"] }
tokio-stream = "0.1"


[build-dependencies]
tonic-build = { version = "0.11", optional = true }


[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
tracing-subscriber = "0.3"
